--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -8594,7 +8594,6 @@ body.md-skin {
 
 
 
-
 .headerBg {
   background: #FCE7C2;
   height: 56px;
@@ -8731,3 +8730,50 @@ body {
     grid-template-columns: 1fr;
   }
 }
+
+.dropdown {
+  border: none;
+  outline: none;
+  font-family: inherit;
+  margin: 0;
+  padding: 8px 4px 7px 10px;
+}
+
+.dropdown a:hover {
+  background-color: #ddd;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #FFF0D1;
+  min-width: 160px;
+  list-style-type: none;
+  padding-left: 0;
+    margin-left: 0;
+  z-index: 1;
+}
+
+.dropdown ul li a {
+   
+    padding: 1px 4px 7px 10px;
+   
+}
+
+.dropdown-content a{
+  float: none;
+  color: black;
+  line-height: 1.5;
+  display: block;
+}
+
+.dropdown-content a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+  color: black;
+}
+
