Customer Transit Correction

--- a/public/assets/css/custom.css
+++ b/public/assets/css/custom.css
@@ -122,8 +122,7 @@ form input,textarea:focus
 .form-group label {
     float: left;
     text-align: left;
-    
-    color: #c72e2e;
+    color: black;
 }
 td label {
     float: left;
