--- a/public/assets/css/custom.css
+++ b/public/assets/css/custom.css
@@ -547,3 +547,16 @@ form textarea
 {
     text-align:right;
 }
+
+.dropdown-item {
+    display: block;
+    /* width: 100%; */
+    /* padding: .25rem 1.5rem; */
+    clear: both;
+    font-weight: 400;
+    color: #212529;
+    text-align: left;
+    white-space: nowrap;
+    background-color: transparent;
+    border: 0;
+}
