--- a/public/assets/css/landing_page.css
+++ b/public/assets/css/landing_page.css
@@ -1,13 +1,13 @@
 body
 {
-    background-color: #f3f3f4
+    background-color:  #FFF0D1;
 }
 .page
 {
-    border:1px solid #1ab394;
+    border:1px solid #A3243C;
     padding:40px;
     margin-top:6%;
-    background:#fff;
+    background:#FFC544;
 }
 .page img
 {
@@ -16,6 +16,8 @@ body
 .page h1,h3
 {
     text-align:center;
+    font-weight:bold;
+    color:#A3243C;
 }
 .page label
 {
@@ -27,13 +29,16 @@ body
 }
 .border
 {
-    border:1px solid #1ab394 !important;
+    border:1px solid #A3243C !important;
 }
 .btn
 {
-    background: #1ab394 !important;
+    background: #A3243C !important;
     color:#fff;
-    
+    border-radius: 40px;
+}
+.form-control {
+    border-radius: 40px;
 }
 .footer span
 {
